2023-08-22T16:09:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5941323026 # 1123
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
* notice: last 14d: unq all: 5 4148
* notice: prev accum: outdated-unq outdated-all / unq all: 1629 150914 / 1661 155226
* notice: next accum: outdated-unq outdated-all / unq all: 1629 150914 / 1661 155320
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -91 / +1 +205 -0 -0 / 1 205
* notice: removed / changed dates: [] / [2023-08-08 2023-08-22]

2023-08-22T08:09:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5936157828 # 1122
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
* notice: last 14d: unq all: 5 4145
* notice: prev accum: outdated-unq outdated-all / unq all: 1629 150914 / 1660 155115
* notice: next accum: outdated-unq outdated-all / unq all: 1629 150914 / 1661 155226
* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -1 -126 / +1 +111 -0 -0 / 1 111
* notice: removed / changed dates: [] / [2023-08-08 2023-08-22]

2023-08-22T00:35:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5932954812 # 1121
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-22
* notice: last 14d: unq all: 5 4160
* notice: prev accum: outdated-unq outdated-all / unq all: 1628 150616 / 1660 155023
* notice: next accum: outdated-unq outdated-all / unq all: 1629 150914 / 1660 155115
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -41 / +2 +298 -0 -0 / 2 298
* notice: removed / changed dates: [2023-08-07] / [2023-08-08 2023-08-21]

2023-08-21T16:09:35Z: