@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-10T00:44:40Z",
-  "count" : 297,
+  "timestamp" : "2023-08-23T00:34:59Z",
+  "count" : 260,
   "count_minmax" : [ 111, 297 ],
-  "count_decinc" : [ -0, +297 ],
+  "count_decinc" : [ -37, +297 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
