@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-08-22T16:09:35Z",
-  "count" : 205,
-  "count_minmax" : [ 111, 205 ],
-  "count_decinc" : [ -0, +205 ],
+  "timestamp" : "2023-08-23T00:34:59Z",
+  "count" : 298,
+  "count_minmax" : [ 111, 298 ],
+  "count_decinc" : [ -0, +298 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
