@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-08-22T16:09:35Z",
-  "count_outdated" : 150914,
-  "uniques_outdated" : 1629,
-  "count" : 155320,
+  "timestamp" : "2023-08-23T00:34:59Z",
+  "count_outdated" : 151212,
+  "uniques_outdated" : 1631,
+  "count" : 155413,
   "uniques" : 1661,
   "clones" : [
     {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 298 ],
-      "count_decinc": [ 258, 298 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2023-08-09T00:00:00Z",
-      "count": 297,
+      "count": 260,
       "count_minmax": [ 111, 297 ],
-      "count_decinc": [ 0, 297 ],
+      "count_decinc": [ 37, 297 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-08-22T00:00:00Z",
-      "count": 205,
-      "count_minmax": [ 111, 205 ],
-      "count_decinc": [ 0, 205 ],
+      "count": 298,
+      "count_minmax": [ 111, 298 ],
+      "count_decinc": [ 0, 298 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
