@@ -1,15 +1,10 @@
 {
-  "count": 4148,
+  "count": 4164,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-08-09T00:00:00Z",
-      "count": 297,
+      "count": 260,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-08-22T00:00:00Z",
-      "count": 205,
+      "count": 298,
       "uniques": 1
     }
   ]
